# College-full-stack-demo

backend-app/: manage.py  pyproject.toml
backend-app/app/: __init__.py  flask_boilerplate_main.db
backend-app/app/controller/: cadeiras_controller.py  unidade_controller.py
backend-app/app/model/: RelacaoCadeiraUnidade_model.py  cadeiras_model.py  unidade_model.py
backend-app/app/service/: cadeiras_service.py  unidade_service.py
backend-app/app/util/: dto.py
backend-app/migrations/versions/: 4ae74d3cb9ec_all.py  a098525e051d_all.py
